--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,29 @@
-version: "3.9"
+version: '3.8'
+
 services:
-  rtmp:
-    build:
-      context: ./rtmp
+  nodejs:
+    build: .
+    volumes:
+      - .:/usr/src/app
+    working_dir: /usr/src/app
+    command: npm start
+    ports:
+      - "5000:5000"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:5000 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+
+  nginx:
+    image: tiangolo/nginx-rtmp:latest
+    volumes:
+      - ./rtmp/nginx.conf:/etc/nginx/nginx.conf
+      - ./data:/tmp/hls
     ports:
       - "1935:1935"
       - "5050:5050"
-    container_name: rtmp_localhost
-    volumes:
-      - ./data:/tmp/hls
-
-  auth:
-    build:
-      context: .
-    container_name: auth_localhost
-
+    depends_on:
+      nodejs:
+        condition: service_healthy
