--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -1,45 +1,48 @@
-worker_processes auto;
-rtmp_auto_push on;
 events {}
+
 rtmp {
     server {
         listen 1935;
-
         application live {
             live on;
             hls on;
             hls_path /tmp/hls;
-            hls_fragment 10s;
-            hls_playlist_length 5m;
-            record off;
-
-            #authentication
-            on_publish http://auth_localhost:5000/auth;
+            hls_fragment 10s; # default is 5s
+            hls_playlist_length 5m; # default is 30s
+            # once playlist length is reached it deletes the oldest fragments
         }
+        # authentication
+        on_publish http://nodejs:5000/auth;
     }
 }
 
-# WEB SERVER    
+# WEB SERVER
 http {
     server {
         listen 5050;
-        
-        location /../ceabj/public/ {
-            root /../ceabj/public/pages/;
+
+        # Reverse proxy to Node.js server
+        location / {
+            proxy_pass http://nodejs:5000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
-
-
 
         location /hls {
             types {
                 application/vnd.apple.mpegurl m3u8;
-                application/octet-stream ts;
+                video/mp2t ts;
             }
-            root /temp;
+            root /tmp;
             add_header Cache-Control no-cache;
 
-            # To avoid issues withs cross domain HTTP requests (e.g. During development)
-            add_header Access-Control-Allow-Origin *;
+            # CORS configuration
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Accept, Origin, X-Requested-With';
         }
     }
 }
