--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGODB_URI=mongodb+srv://prospermadojemu:iliveablessedlife1@ceabjcluster.ob2nho
 PORT=5000
 CLIENT_ID=788741773881-4m47s3r5i86d7ccn8s7c7ee7r13l0q9d.apps.googleusercontent.com
 CLIENT_SECRET=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
+ADMIN_EMAIL= admin@ceabaranje.com
+ADMIN_PASSWORD = ceabaranje@admin234
+STREAM_KEY = prosper
