--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
 }
