--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ceabj",
   "version": "1.0.0",
   "main": "script.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -25,6 +26,7 @@
     "express-session": "^1.18.0",
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
