--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "archetype": "^0.13.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "bootstrap": "^5.0.2",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -29,6 +28,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4"
   }
 }
