--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
-    "timepicker-ui": "^2.6.1"
+    "timepicker-ui": "^2.6.1",
+    "ws": "^8.18.0"
   }
 }
