--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -7,9 +7,8 @@ rtmp {
             live on;
             hls on;
             hls_path /tmp/hls;
-            hls_fragment 10s; # default is 5s
-            hls_playlist_length 5m; # default is 30s
-            # once playlist length is reached it deletes the oldest fragments
+            hls_fragment 10s;
+            hls_playlist_length 5m; 
         }
         # authentication
         on_publish http://nodejs:5000/auth;
