--- a/rtmp/nginx.conf
+++ b/rtmp/nginx.conf
@@ -1,8 +1,10 @@
 events {}
-
+worker_processes auto;
+rtmp_auto_push on;
 rtmp {
     server {
         listen 1935;
+        listen [::]:1935 ipv6only=on;
         application live {
             live on;
             hls on;
@@ -43,5 +45,15 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Accept, Origin, X-Requested-With';
         }
+
+        location /stat {
+            rtmp_stat all;
+            allow all;
+        }
+
+        location /stat.xsl {
+            root /data/stats/; 
+        }
+
     }
 }
