--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
     command: npm start
     ports:
       - "5000:5000"
-    # healthcheck:
-    #   test: ["CMD-SHELL", "curl -f http://localhost:5000 || exit 1"]
-    #   interval: 30s
-    #   timeout: 10s
-    #   retries: 5
+    environment:
+      - STREAM_KEY=prosper
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:5000 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 
   nginx:
@@ -21,6 +23,7 @@ services:
     volumes:
       - ./rtmp/nginx.conf:/etc/nginx/nginx.conf
       - ./data:/tmp/hls
+      - ./data:/data/stats
     ports:
       - "1935:1935"
       - "5050:5050"
