--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mongodb-js/charts-embed-dom": "^3.3.1",
     "archetype": "^0.13.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^5.0.0",
@@ -32,6 +33,7 @@
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "timepicker-ui": "^2.6.1",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "xml2js": "^0.6.2"
   }
 }
